#homepage Prevent content from jumping when header becomes sticky

--- a/src/main.css
+++ b/src/main.css
@@ -258,7 +258,7 @@ select {
     left: 0;
     width: 100%;
     background: rgba(255, 255, 255);
-    box-shadow: 0px 0px 5px 0px #cbcbcb;
+    box-shadow: 0px 4px 7px 0px rgba(0,0,0,0.5);
     z-index: 300;
 }
 
